sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value getValeurs
    if (getValeurs(nain)<getValeurs(nain+1)) {
        ^AlgGnomeSort:8: error: not found: value getValeurs
    if (getValeurs(nain)<getValeurs(nain+1)) {
                         ^